--- a/src/shared/config/i18n/locales/ru/translation.json
+++ b/src/shared/config/i18n/locales/ru/translation.json
@@ -40,7 +40,7 @@
     "searchPlaceholder": "Поиск по категориям",
     "alphaBanner": {
       "title": "Альфа-версия",
-      "description": "Мы активно развиваем приложение. Возможны нестабильности."
+      "description": "Многие функции не доступны."
     },
     "emptyTitle": "Ничего не найдено",
     "emptyDescription": "Попробуйте изменить запрос"
