feat: add cover upload and submission result modal

--- a/src/shared/config/i18n/locales/ru/translation.json
+++ b/src/shared/config/i18n/locales/ru/translation.json
@@ -192,6 +192,11 @@
           "label": "Описание",
           "placeholder": "Краткая аннотация или питч"
         },
+        "cover": {
+          "label": "Обложка",
+          "cta": "Загрузить изображение",
+          "placeholder": "Изображение не выбрано"
+        },
         "file": {
           "label": "EPUB-файл",
           "cta": "Загрузить .epub",
@@ -203,7 +208,15 @@
       "toastSuccess": "Книга «{{title}}» отправлена на модерацию.",
       "toastFallbackTitle": "ваша книга",
       "toastError": "Не удалось отправить книгу. Попробуйте позже.",
-      "toastMissingFile": "Прикрепите EPUB-файл перед отправкой."
+      "toastMissingFile": "Прикрепите EPUB-файл перед отправкой.",
+      "toastMissingCover": "Добавьте изображение обложки.",
+      "modal": {
+        "successTitle": "Заявка отправлена",
+        "successDescription": "Книга «{{title}}» принята на рассмотрение. Мы сообщим о результате.",
+        "errorTitle": "Не удалось отправить",
+        "errorDescription": "Что-то пошло не так. Попробуйте ещё раз позже.",
+        "close": "Понятно"
+      }
     },
     "voting": {
       "title": "Редакторское голосование",
