--- a/src/shared/config/i18n/locales/en/translation.json
+++ b/src/shared/config/i18n/locales/en/translation.json
@@ -186,6 +186,11 @@
           "label": "Description",
           "placeholder": "Short synopsis or pitch"
         },
+        "cover": {
+          "label": "Cover image",
+          "cta": "Upload image",
+          "placeholder": "No image selected"
+        },
         "file": {
           "label": "EPUB file",
           "cta": "Upload .epub",
@@ -197,7 +202,15 @@
       "toastSuccess": "Book \"{{title}}\" submitted for review.",
       "toastFallbackTitle": "your book",
       "toastError": "Failed to submit the book. Try again later.",
-      "toastMissingFile": "Attach the EPUB file before submitting."
+      "toastMissingFile": "Attach the EPUB file before submitting.",
+      "toastMissingCover": "Add a cover image.",
+      "modal": {
+        "successTitle": "Proposal submitted",
+        "successDescription": "Book \"{{title}}\" is now pending review. We'll notify you once it's processed.",
+        "errorTitle": "Submission failed",
+        "errorDescription": "Something went wrong. Please try again later.",
+        "close": "Got it"
+      }
     },
     "voting": {
       "title": "Editorial voting",
