--- a/src/shared/config/i18n/locales/ru/translation.json
+++ b/src/shared/config/i18n/locales/ru/translation.json
@@ -222,6 +222,18 @@
           "label": "Автор",
           "placeholder": "Введите имя автора"
         },
+        "category": {
+          "label": "Категория",
+          "placeholder": "Выберите жанр или подборку"
+        },
+        "hashtags": {
+          "label": "Хештеги",
+          "placeholder": "Введите хештег и нажмите Enter",
+          "add": "Добавить хештег",
+          "hint": "Используйте до {{count}} хештегов, чтобы упростить поиск.",
+          "empty": "Хештеги пока не добавлены.",
+          "remove": "Удалить хештег {{tag}}"
+        },
         "description": {
           "label": "Описание",
           "placeholder": "Краткая аннотация или питч"
@@ -244,6 +256,9 @@
       "toastError": "Не удалось отправить книгу. Попробуйте позже.",
       "toastMissingFile": "Прикрепите EPUB-файл перед отправкой.",
       "toastMissingCover": "Добавьте изображение обложки.",
+      "toastMissingCategory": "Выберите категорию для книги.",
+      "toastHashtagInvalid": "Введите хештег перед добавлением.",
+      "toastHashtagLimit": "Можно добавить не более {{count}} хештегов.",
       "modal": {
         "successTitle": "Заявка отправлена",
         "successDescription": "Книга «{{title}}» принята на рассмотрение. Мы сообщим о результате.",
@@ -268,7 +283,8 @@
       },
       "actions": {
         "approve": "Одобрить",
-        "reject": "Отклонить"
+        "reject": "Отклонить",
+        "viewDetails": "Подробнее"
       },
       "toast": {
         "submitted": "Голос сохранён",
@@ -276,6 +292,32 @@
         "rejected": "Заявка отклонена",
         "error": "Не удалось отправить голос. Попробуйте позже."
       }
+    },
+    "proposalDetails": {
+      "back": "К списку заявок",
+      "loading": "Загрузка заявки...",
+      "loadError": "Не удалось загрузить заявку. Попробуйте позже.",
+      "sections": {
+        "overview": "Общие сведения",
+        "description": "Описание",
+        "files": "Переданные файлы"
+      },
+      "category": "Категория",
+      "hashtags": "Хештеги",
+      "noHashtags": "Хештеги не указаны.",
+      "status": {
+        "label": "Статус",
+        "PENDING": "На рассмотрении",
+        "APPROVED": "Одобрена",
+        "REJECTED": "Отклонена"
+      },
+      "submitted": "Отправлена {{value}}",
+      "updated": "Обновлена {{value}}",
+      "manuscript": "Рукопись",
+      "cover": "Обложка",
+      "download": "Скачать рукопись",
+      "noDownload": "Файл хранится в децентрализованном хранилище Walrus",
+      "noCover": "Файл обложки недоступен"
     }
   }
 }
