Add cover preview and download action to voting cards

--- a/src/shared/config/i18n/locales/en/translation.json
+++ b/src/shared/config/i18n/locales/en/translation.json
@@ -278,8 +278,10 @@
       "actions": {
         "approve": "Approve",
         "reject": "Reject",
-        "viewDetails": "View details"
+        "viewDetails": "View details",
+        "download": "Download book"
       },
+      "coverAlt": "Cover of \"{{title}}\"",
       "toast": {
         "submitted": "Vote saved",
         "approved": "Proposal approved and moved to the library",
