--- a/src/shared/config/i18n/locales/ru/translation.json
+++ b/src/shared/config/i18n/locales/ru/translation.json
@@ -244,8 +244,8 @@
           "placeholder": "Изображение не выбрано"
         },
         "file": {
-          "label": "EPUB-файл",
-          "cta": "Загрузить .epub",
+          "label": "PDF-файл",
+          "cta": "Загрузить .pdf",
           "placeholder": "Файл не выбран"
         },
         "submit": "Отправить на модерацию",
@@ -254,7 +254,7 @@
       "toastSuccess": "Книга «{{title}}» отправлена на модерацию.",
       "toastFallbackTitle": "ваша книга",
       "toastError": "Не удалось отправить книгу. Попробуйте позже.",
-      "toastMissingFile": "Прикрепите EPUB-файл перед отправкой.",
+      "toastMissingFile": "Прикрепите PDF-файл перед отправкой.",
       "toastMissingCover": "Добавьте изображение обложки.",
       "toastMissingCategory": "Выберите категорию для книги.",
       "toastHashtagInvalid": "Введите хештег перед добавлением.",
@@ -270,13 +270,13 @@
     "voting": {
       "title": "Редакторское голосование",
       "description": "Оцените новые заявки и решите их судьбу.",
-      "threshold": "Для одобрения нужно более 50% голосов «за». Допущенных голосующих: {{count}}.",
+      "threshold": "Для одобрения нужно {{required}} подтверждения. Допущенных голосующих: {{count}}.",
       "notTelegram": "Откройте мини-приложение в Telegram, чтобы участвовать в голосовании.",
-      "notAllowed": "Голосование доступно только редакции.",
+      "notAllowed": "Голосовать могут только @lawyerdsupport и @oxfrrdd.",
       "empty": "Нет заявок, которые ждут вашего голоса.",
       "loading": "Загрузка заявок...",
       "loadError": "Не удалось загрузить заявки.",
-      "progress": "{{positive}} / {{total}} голосов «за» • {{negative}} голосов «против»",
+      "progress": "{{positive}} / {{required}} голосов «за» • {{negative}} голосов «против»",
       "youVoted": {
         "approve": "Вы проголосовали за публикацию этой книги.",
         "reject": "Вы проголосовали против этой книги."
