--- a/src/shared/config/i18n/locales/ru/translation.json
+++ b/src/shared/config/i18n/locales/ru/translation.json
@@ -228,9 +228,9 @@
           "placeholder": "Выберите жанр или подборку"
         },
         "price": {
-          "label": "Цена в Stars",
+          "label": "Цена в Stars ⭐",
           "placeholder": "Укажите цену",
-          "hint": "Это сумма, которую будут платить читатели в Stars."
+          "hint": "Это сумма, которую будут платить читатели в Stars ⭐"
         },
         "hashtags": {
           "label": "Хештеги",
@@ -255,7 +255,7 @@
           "placeholder": "Файл не выбран"
         },
         "submit": "Отправить на модерацию",
-        "notice": "Рукопись будет загружена в TON Storage через наш сервер."
+        "notice": "Рукопись будет загружена в децентрализированое хранилище Walrus через наш сервер."
       },
       "toastSuccess": "Книга «{{title}}» отправлена на модерацию.",
       "toastFallbackTitle": "ваша книга",
