--- a/src/shared/config/i18n/locales/ru/translation.json
+++ b/src/shared/config/i18n/locales/ru/translation.json
@@ -213,6 +213,7 @@
     "publish": {
       "title": "Опубликовать новую книгу",
       "description": "Подготовьте рукопись и отправьте её в маркетплейс TON.",
+      "restrictedAlert": "Публиковать книги могут только авторы из утверждённого списка.",
       "form": {
         "name": {
           "label": "Название книги",
@@ -264,6 +265,7 @@
       "toastMissingCategory": "Выберите категорию для книги.",
       "toastMissingPrice": "Укажите цену в Stars.",
       "toastInvalidPrice": "Введите неотрицательное число Stars.",
+      "toastRestricted": "Публиковать книги могут только авторы из списка.",
       "toastHashtagInvalid": "Введите хештег перед добавлением.",
       "toastHashtagLimit": "Можно добавить не более {{count}} хештегов.",
       "modal": {
