chore: edit styles

--- a/src/shared/config/i18n/locales/en/translation.json
+++ b/src/shared/config/i18n/locales/en/translation.json
@@ -207,7 +207,7 @@
     "publish": {
       "title": "Publish a new book",
       "description": "Prepare your manuscript and submit it for the TON marketplace.",
-      "restrictedAlert": "Only approved authors can submit book proposals.",
+      "restrictedAlert": "Only approved authors can submit book proposals \uD83D\uDEAB",
       "form": {
         "name": {
           "label": "Book title",
