--- a/src/shared/config/i18n/locales/ru/translation.json
+++ b/src/shared/config/i18n/locales/ru/translation.json
@@ -213,7 +213,7 @@
     "publish": {
       "title": "Опубликовать новую книгу",
       "description": "Подготовьте рукопись и отправьте её в маркетплейс TON.",
-      "restrictedAlert": "Публиковать книги могут только авторы из утверждённого списка.",
+      "restrictedAlert": "Публиковать книги могут только авторы из утверждённого списка \uD83D\uDEAB",
       "form": {
         "name": {
           "label": "Название книги",
