--- a/src/shared/config/i18n/locales/ru/translation.json
+++ b/src/shared/config/i18n/locales/ru/translation.json
@@ -23,7 +23,13 @@
     }
   },
   "footer": {
-    "languageLabel": "Язык интерфейса"
+    "languageLabel": "Язык интерфейса",
+    "contact": "Контакты",
+    "themeToggleLabel": "Переключить на {{mode}}",
+    "theme": {
+      "light": "светлый режим",
+      "dark": "тёмный режим"
+    }
   },
   "errors": {
     "genericTitle": "Что-то пошло не так",
@@ -213,7 +219,15 @@
       "loading": "Загружаем ваши книги...",
       "empty": "Вы ещё не приобретали книги.",
       "loadError": "Не удалось загрузить вашу полку.",
-      "retry": "Повторить"
+      "retry": "Повторить",
+      "actions": {
+        "read": "Читать",
+        "download": "Скачать"
+      },
+      "toast": {
+        "missingFile": "Ссылка на файл ещё готовится. Попробуйте позже.",
+        "downloadError": "Не удалось скачать книгу. Повторите попытку позже."
+      }
     },
     "publish": {
       "title": "Опубликовать новую книгу",
@@ -338,5 +352,11 @@
       "noDownload": "Файл хранится в децентрализованном хранилище Walrus",
       "noCover": "Файл обложки недоступен"
     }
+  },
+  "contact": {
+    "title": "Связаться с поддержкой",
+    "subtitle": "Нужна помощь? Мы всегда рядом.",
+    "description": "Напишите нашей команде в Telegram, и мы ответим в ближайшее время.",
+    "telegramCta": "Открыть @lawyerdsupport"
   }
 }
