--- a/src/shared/config/i18n/locales/ru/translation.json
+++ b/src/shared/config/i18n/locales/ru/translation.json
@@ -23,13 +23,7 @@
     }
   },
   "footer": {
-    "languageLabel": "Язык интерфейса",
-    "contact": "Контакты",
-    "themeToggleLabel": "Переключить на {{mode}}",
-    "theme": {
-      "light": "светлый режим",
-      "dark": "тёмный режим"
-    }
+    "languageLabel": "Язык интерфейса"
   },
   "errors": {
     "genericTitle": "Что-то пошло не так",
@@ -231,7 +225,7 @@
     },
     "publish": {
       "title": "Опубликовать новую книгу",
-      "description": "Подготовьте рукопись и отправьте её в маркетплейс TON.",
+      "description": "Подготовьте рукопись и отправьте её в маркетплейс TON",
       "restrictedAlert": "Публиковать книги могут только авторы из утверждённого списка \uD83D\uDEAB",
       "form": {
         "name": {
@@ -352,11 +346,5 @@
       "noDownload": "Файл хранится в децентрализованном хранилище Walrus",
       "noCover": "Файл обложки недоступен"
     }
-  },
-  "contact": {
-    "title": "Связаться с поддержкой",
-    "subtitle": "Нужна помощь? Мы всегда рядом.",
-    "description": "Напишите нашей команде в Telegram, и мы ответим в ближайшее время.",
-    "telegramCta": "Открыть @lawyerdsupport"
   }
 }
